fix layout bug due to header section size

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-img
+img,
 embed, 
 object, 
 video {
@@ -23,29 +23,30 @@ body {
 header {
     text-transform: uppercase;
     text-align: right;
-    font-size: 2.5em; 
+    max-width: 100%;    
 }
 
-.header-section {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 5px solid #7d97ad;
-    padding: 15px 10px;
-}
 
 .name, 
 .job-title {
     font-weight: normal;
 }
 
+.header-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 5px solid #7d97ad;
+    padding: 15px 10px;
+    width: 100%;
+}
 
 /* Hero */
 .hero-image {
     margin: 30px 0;
     align-items: center;
-    width: 100%;
+    width: auto;
     height: 500px;
-    /* height: 400px; */
     background-image: url('../img/keyboard.jpeg');
     background-size: cover;
     background-position: 25% 75%;
@@ -65,6 +66,11 @@ header {
     justify-content: space-between;
     margin: 15px;
     color: #2d3c49;
+}
+
+.project {
+    margin: auto;
+    padding: 1.5em;
 }
 
 .project-details {
